[package]
name = "sdf_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom ="7.1.0"
nom-derive = "0.10.0"
byteorder = "1.4.3"
byte-slice-cast = "1.2.0"
geojson = "0.22.2"
geo-types = "0.7.2"
glob = "0.3.0"
float-cmp = "0.9.0"